--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -21,4 +21,24 @@
     box-shadow: 0 2px 2px 2px rgba(73, 69, 69, 0.249);
     margin: 10px;
     padding: 20px;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.infoContainer > h2 {
+    font-size: 2rem;
+}
+
+#profile {
+    width: 100px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between
+}
+
+#pic{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
 }
