--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,5 +1,5 @@
 
-.form {
+.post {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,18 +7,13 @@
 }
 
 #postForm {
-    width: 40vw;
-    background-color: #FFFFFF;
+    border-radius: 5px;
     box-shadow: 0 2px 2px 2px rgba(73, 69, 69, 0.249);
-    height: 450px;
-    width: 350px;
+    width: 400px;
 }
 
-#postForm > div {
-    padding: 20px;
-}
-
-
-#img, img {
-    height: 100px;
+#postForm > h2 {
+    font-size: 2rem;
+    color: #FF9771;
+    font-weight: 700;
 }
