--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   min-height: 100vh;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #F2F2F2;
 }
 
 .App-logo {
