--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -7,3 +7,31 @@
     background-image: linear-gradient(to right, #FF71A6, #FF9771);
     box-shadow: 0 0 10px 10px rgba(73, 69, 69, 0.249);
 }
+
+.menuBtns {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80vh;
+    padding-top: 50px;
+    font-size: 1rem;
+}
+
+.bt {
+    background-color: gray;
+    border-radius: 2px;
+    width: 70px;
+    padding: 5px;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 25px;
+    box-shadow: 2px 2px 2px 2px rgba(14, 13, 13, 0.249);
+}
+
+
+.bt:active {
+    box-shadow: 0 2px rgb(255, 211, 66);
+    transform: translateY(1px);
+  }
