--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px 20px 20px 100px;    
+    flex-direction: column;
 }
 
 #preview{
@@ -42,4 +43,21 @@
     height: 30px;
     width: 30px;
     border-radius: 50%;
+}
+
+
+#search {
+    padding: 10px;
+    width: 60%;
+    height: 50px;
+    padding: 20px;
+    margin-top: 50px; 
+    box-shadow: 0 2px 2px 2px rgba(73, 69, 69, 0.249);
+    background-color: #FFFFFF;
+}
+
+#search > input {
+    height: 20px;
+    width: 30vw;
+    margin: 10px;
 }
