--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -23,7 +23,7 @@
     height: 100px;
 }
 
-#postBtn {
+.postBtn {
     background-color: gray;
     border-radius: 2px;
     width: 60px;
@@ -32,7 +32,7 @@
     cursor: pointer;
 }
 
-#postBtn:active{
+.postBtn:active{
     box-shadow: 0 2px rgb(254, 125, 215);
     transform: translateY(1px);
 }
